supression style sur html et ajout d'une class mit dans le css+ajout balise Header et changement de l'id de header en carousel car plus logique

--- a/assets/style.css
+++ b/assets/style.css
@@ -223,6 +223,9 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
+.none{
+	display:none;
+}
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
